adjust some static text to be dynamic

--- a/public/locale/ar/translation.json
+++ b/public/locale/ar/translation.json
@@ -3,5 +3,7 @@
   "delete": "حذف",
   "add": "اضافه",
   "placeholder": "اكتب مهمتك",
-  "language":"العربيه"
+  "language":"العربيه",
+    "arLang":"العربيه",
+  "enLang":"الانجليزيه"
 }
