--- a/public/locale/en/translation.json
+++ b/public/locale/en/translation.json
@@ -3,5 +3,7 @@
   "delete": "Delete",
   "add": "Add",
   "placeholder": "Type your Task",
-  "language":"English"
+  "language":"English",
+    "arLang":"Arabic",
+  "enLang":"English"
 }
